--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
             </div>
         </div>
         </div>
+
         <div class="flex-container">
         <div class="wrapper">
              <div class="header-txt">
@@ -115,7 +116,7 @@
             <div class="box__2">
                 <div class="hover-effect">
                     <a href="#" class="hover-text">
-                        <h3>BOOMING SHOP</h3>
+                        <h3>Seo Software</h3>
                         <p>Website Development<p>
                     </a>
                 </div>
@@ -123,7 +124,7 @@
             <div class="box__3">
                 <div class="hover-effect">
                     <a href="#" class="hover-text">
-                        <h3>BOOMING SHOP</h3>
+                        <h3>Fresh music</h3>
                         <p>Website Development<p>
                     </a>
                 </div>
@@ -131,7 +132,7 @@
             <div class="box__4">
                 <div class="hover-effect">
                     <a href="#" class="hover-text">
-                        <h3>BOOMING SHOP</h3>
+                        <h3>App sketch</h3>
                         <p>Website Development<p>
                     </a>
                 </div>
@@ -139,7 +140,7 @@
             <div class="box__5">
                 <div class="hover-effect">
                     <a href="#" class="hover-text">
-                        <h3>BOOMING SHOP</h3>
+                        <h3>Family safety</h3>
                         <p>Website Development<p>
                     </a>
                 </div>
@@ -150,7 +151,7 @@
             <div class="box__6">
                 <div class="hover-effect">
                     <a href="#" class="hover-text">
-                        <h3>BOOMING SHOP</h3>
+                        <h3>Something nothing</h3>
                         <p>Website Development<p>
                     </a>
                 </div>
@@ -158,7 +159,7 @@
             <div class="box__7">
                 <div class="hover-effect">
                     <a href="#" class="hover-text">
-                        <h3>BOOMING SHOP</h3>
+                        <h3>Grocery</h3>
                         <p>Website Development<p>
                     </a>
                 </div>
